tried to test on the python notebook, failed; edited datasets (should be correct now)

--- a/fakenews_1.0.ipynb
+++ b/fakenews_1.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reading the training and test datatset\n",
-    "train=pd.read_csv('./fake-news/train.csv')\n",
-    "test=pd.read_csv('./fake-news/test.csv')"
+    "train=pd.read_csv(r'C:\\Users\\Caitlin Lee\\Documents\\Internship\\fake-news\\train_2.csv')\n",
+    "test=pd.read_csv(r'C:\\Users\\Caitlin Lee\\Documents\\Internship\\fake-news\\test_2.csv')"
    ]
   },
   {
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(20800, 5) (5200, 4)\n"
+      "(35907, 130) (8976, 4)\n"
      ]
     }
    ],
@@ -84,20 +84,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id           0\n",
-      "title      558\n",
-      "author    1957\n",
-      "text        39\n",
-      "label        0\n",
-      "dtype: int64\n",
-      "************\n"
+      "id                  0\n",
+      "title               0\n",
+      "text                0\n",
+      "label               3\n",
+      "Unnamed: 4      35907\n",
+      "                ...  \n",
+      "Unnamed: 125    35906\n",
+      "Unnamed: 126    35906\n",
+      "Unnamed: 127    35906\n",
+      "Unnamed: 128    35906\n",
+      "Unnamed: 129    35906\n",
+      "Length: 130, dtype: int64\n",
+      "************\n",
+      "id       0\n",
+      "title    0\n",
+      "text     0\n",
+      "label    0\n",
+      "dtype: int64\n"
      ]
     }
    ],
