testing on webscraping and update to dataset

--- a/Webscraping.ipynb
+++ b/Webscraping.ipynb
@@ -3224,35 +3224,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Biden and Obama get together, take aim at Trump's coronavirus response\n",
-      "WASHINGTON — Barack Obama praises Joe Biden’s empathy in a newly-released campaign video while the presumptive Democratic presidential nominee expresses frustration with President Donald Trump’s handling of the coronavirus crisis, saying he “can’t relate in any way” to Americans’ struggles.\n",
+      "3 food suppliers in L.A. County ordered to close after ‘significant’ coronavirus outbreaks not reported to health department\n",
+      "Three food suppliers in Los Angeles County were ordered to close due to “significant” coronavirus outbreaks among their employees, officials said Monday.\n",
       "\n",
-      "In their first in-person joint appearance of what has become a largely virtual campaign, the former president and vice president sat down earlier this month for what the Biden team calls a “wide-ranging” and “socially distant” conversation about the biggest challenges facing America, including the pandemic, the economic crisis, and how to address systemic racism.\n",
+      "S & S Foods in Azusa had a total of 58 employees test positive for the virus, Mission Foods Corp. in Commerce had 40 who tested positive, and Golden State Foods Corp. in the City of Industry had 43 employees with the virus.\n",
       "\n",
-      "A fuller video will be released Thursday. But in a preview posted Wednesday morning, Biden asks his former running mate if he could imagine standing before the country as president to say: “I take no responsibility.”\n",
+      "Golden State Foods Corp. is one of the largest and longest-serving suppliers to McDonald’s, and Mission Foods is one of the most popular tortilla makers in the U.S.\n",
       "\n",
-      "\"Those words didn’t come out of our mouths while we were in office,” Obama says.\n",
+      "“They have significant outbreaks amongst their employees [and] we were not notified, as we’re required to be notified, once they had their three cases,” Public Health Director Barbara Ferrer said during a Monday news conference. “Our inspector asked them to make some modifications to really enhance their infection control protocols at all three sites”\n",
       "\n",
-      "\"I don't understand his inability to get a sense of what people are going through,” Biden says. \"He just can’t — he can't relate in any way.”\n",
+      "Garment factories, meatpacking plants and food processing centers in the county have recently experienced some of the worst coronavirus outbreaks.\n",
       "\n",
-      "Obama says it was precisely Biden’s ability to relate with Americans’ struggles today that drew him to choose him as his running mate 12 years ago.\n",
+      "Workplaces, food and retail stores and educational settings in L.A. County have to report outbreaks to the health department after they’ve had at least three people test positive for the virus.\n",
       "\n",
-      "“It's the reason I wanted you to be my vice president, and the reason why you were so effective,” Obama says. “It all starts with being able to relate. If you can sit down with a family and see your own family in them, and the struggles that you’ve gone through or your parents went through or your kids are going through, if you can connect those struggles to somebody else’s struggles, then you’re going to work hard for them. And that’s always what’s motivated you to get into public service.”\n",
+      "As of Monday, 245 such locations were listed on the department’s site for having at least three cases, with the largest outbreaks reported at the Smithfield meat packing plant in Vernon, with 220 cases, and at Los Angeles Apparel with 384 cases.\n",
       "\n",
-      "The Biden campaign is using the video preview to try and build its digital get-out-the-vote efforts, encouraging supporters to text the campaign to receive notifications when the full video is posted to both the Obama and Biden social media channels. Biden’s team is similarly encouraging supporters to sign up for email and mobile alerts about his choice of a potential running mate, expected in early August.\n",
+      "Los Angeles Apparel had also been ordered to close its South L.A. garment factory June 27 after four employees died of COVID-19 and inspectors found “flagrant violations” of COVID-19 guidelines.\n",
       "\n",
-      "The video also serves as a preview of the kind convention Democrats are planning next month — one where most of the action is not in a single venue in Milwaukee but largely online, with events and speakers being broadcast from all over the country.\n",
+      "The health department allowed the factory to reopen last week after they complied with all the mandates required. That includes training employees on physically distancing, wearing face coverings and following enhanced cleaning regimens.\n",
       "\n",
-      "\"Milwaukee is still the anchor of our convention,” Biden told a Milwaukee television station Tuesday night. But he said it would be a combination of “live and viral” events.\n",
+      "They also started screening employees for COVID-19 symptoms — something officials say they weren’t doing before.\n",
       "\n",
-      "“We're already moving in the direction of doing biographical pieces and the like, and laying out what we're going to be running on so that a lot of [it] will be virtual on television … coming from different parts of the country in all probability,” he said.\n"
+      "“I want to be clear though, they must continue to follow the mandated requirements,” county Health Officer Dr. Muntu Davis said in announcing their reopening last week. “We’ll be monitoring them to ensure ongoing compliance. They’re required to report any new cases of COVID-19 to our department, and our inspectors will continue to conduct unannounced visits to ensure that infection control measures remain in place.”\n",
+      "\n",
+      "Health inspectors visit businesses seven days a week, investigating more than 17,000 locations reported to the department since March for not complying with health officer orders meant to curb the spread of the coronavirus.\n",
+      "\n",
+      "While most of the businesses under investigation either came into compliance or worked with inspectors to follow requirements, the health department had shut down 26 restaurants, one grocery store, one pool and 67 unregulated businesses, which includes three gyms, as of last week, according to Davis.\n",
+      "\n",
+      "“Our number one priority is protecting the health and well-being of the employees, and noncompliance with the reopening safer-at-work order may result in another shutdown,” Davis said.\n",
+      "\n",
+      "L.A. County has recorded a total of 176,028 coronavirus cases and 4,375 deaths as of Monday.\n",
+      "\n",
+      "All indoor operations must be closed at restaurants, houses of worship, gyms, fitness centers, museums, hair salons, barbershops and other personal care services.\n",
+      "\n",
+      "Each sector allowed to open has to follow strict protocols amid the pandemic. They can be found on the health department’s website.\n"
      ]
     }
    ],
@@ -3260,7 +3272,7 @@
     "# !pip3 install newspaper3k\n",
     "from newspaper import Article\n",
     "\n",
-    "url = \"https://www.nbcnews.com/news/amp/ncna1234574\"\n",
+    "url = \"https://ktla.com/news/local-news/3-food-suppliers-in-l-a-county-ordered-to-close-after-significant-coronavirus-outbreaks/amp/\"\n",
     "\n",
     "news_article = Article(url, language = \"en\")\n",
     "news_article.download()\n",
