added script to clean article

--- a/Webscraping.ipynb
+++ b/Webscraping.ipynb
@@ -3224,7 +3224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3280,7 +3280,58 @@
     "news_article.nlp()\n",
     "\n",
     "print(news_article.title)\n",
-    "print(news_article.text)"
+    "print(news_article.text)\n",
+    "\n",
+    "title = news_article.title\n",
+    "text = news_article.text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 3 food supplier la county ordered close significant coronavirus outbreak reported health department\n",
+      "\n",
+      "\n",
+      " three food supplier los angeles county ordered close due significant coronavirus outbreak among employee official said monday food azusa total 58 employee test positive virus mission food corp commerce 40 tested positive golden state food corp city industry 43 employee virus golden state food corp one largest longestserving supplier mcdonalds mission food one popular tortilla maker u significant outbreak amongst employee notified required notified three case public health director barbara ferrer said monday news conference inspector asked make modification really enhance infection control protocol three site garment factory meatpacking plant food processing center county recently experienced worst coronavirus outbreak workplace food retail store educational setting la county report outbreak health department theyve least three people test positive virus monday 245 location listed department site least three case largest outbreak reported smithfield meat packing plant vernon 220 case los angeles apparel 384 case los angeles apparel also ordered close south la garment factory june 27 four employee died covid19 inspector found flagrant violation covid19 guideline health department allowed factory reopen last week complied mandate required includes training employee physically distancing wearing face covering following enhanced cleaning regimen also started screening employee covid19 symptom something official say werent want clear though must continue follow mandated requirement county health officer dr muntu davis said announcing reopening last week well monitoring ensure ongoing compliance theyre required report new case covid19 department inspector continue conduct unannounced visit ensure infection control measure remain place health inspector visit business seven day week investigating 17000 location reported department since march complying health officer order meant curb spread coronavirus business investigation either came compliance worked inspector follow requirement health department shut 26 restaurant one grocery store one pool 67 unregulated business includes three gym last week according davis number one priority protecting health wellbeing employee noncompliance reopening saferatwork order may result another shutdown davis said la county recorded total 176028 coronavirus case 4375 death monday indoor operation must closed restaurant house worship gym fitness center museum hair salon barbershop personal care service sector allowed open follow strict protocol amid pandemic found health department website\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "import nltk\n",
+    "import os\n",
+    "import sys\n",
+    "import re\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "#print(text.replace('\\n', ''))\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "def clean_data(article):\n",
+    "    article = article.replace('\\n', ' ')\n",
+    "    cleaned_text = ''\n",
+    "    article = article.lower()\n",
+    "    article = re.sub(r'[^\\w\\s]','', article)\n",
+    "    tokenized = word_tokenize(article)\n",
+    "    stop_removed = [word for word in tokenized if not word in stopwords.words('english')]\n",
+    "    \n",
+    "    for word in stop_removed:\n",
+    "        cleaned_text = cleaned_text + ' ' + str(lemmatizer.lemmatize(word))#.lower()\n",
+    "    return cleaned_text\n",
+    "\n",
+    "clean_text = clean_data(text)\n",
+    "clean_title = clean_data(title)\n",
+    "\n",
+    "print(clean_title)\n",
+    "print('\\n')\n",
+    "print(clean_text)\n"
    ]
   }
  ],
